Check ispot username and email validation

--- a/newsletter_templates/v0_0_1.Rmd
+++ b/newsletter_templates/v0_0_1.Rmd
@@ -4,9 +4,9 @@ output: blastula::blastula_email
 params:
   name: NULL
   email: NULL
-  irecord_username: NULL
-  ispot_username: NULL
-  inat_username: NULL
+  irecord_username: NA
+  ispot_username: NA
+  inat_username: NA
 ---
 
 ```{r include=FALSE}
@@ -45,20 +45,31 @@ Your iNaturalist username is `r params$inat_username`
 
 ```{r, echo = F}
 #get records from iRecord
-irecord_records <- NULL
+if (!is.na(params$irecord_username)){
+  irecord_records <- NULL
+}
 
 #get records from iSpot
-ispot_records <- NULL
+if (!is.na(params$ispot_username)){
+  ispot_records <- NULL
+}
 
 #get records from iNaturalist
-inat_records <- get_records_inat(params$inat_username)
-inat_records$website <- "iNaturalist"
+if (!is.na(params$inat_username)){
+  inat_records <- get_records_inat(params$inat_username)
+  inat_records$website <- "iNaturalist"
+}
 
 
 
 
 #combine records from different sources
 all_records <- inat_records
+
+if(nrow(all_records)== 0){
+  print("Error: no records")
+  knit_exit()
+}
 
 all_records$observed_on <- all_records$observed_on %>% as.Date()
 
