--- a/newsletter_templates/v0_0_1.Rmd
+++ b/newsletter_templates/v0_0_1.Rmd
@@ -87,10 +87,17 @@ all_records <- data.frame(
 #get records from iRecord
 if (!is.na(params$irecord_username)){
   #key <- readLines(file("../.secrets/irecord_key.txt",open="r"))
-  irecord_records <- get_records_irecord(params$irecord_username,nrecords = 10,params$irecord_key)
-  irecord_records$website <- "iRecord"
+  irecord_records <- get_records_irecord(params$irecord_username,
+                                         nrecords = 10,
+                                         params$irecord_key,
+                                         start_date = start_date,
+                                         end_date = end_date)
   
-  all_records <- bind_rows(all_records,irecord_records)
+  if(nrow(irecord_records)!=0){
+    irecord_records$website <- "iRecord"
+    
+    all_records <- bind_rows(all_records,irecord_records)
+  }
 }
 
 #get records from iSpot
@@ -115,9 +122,10 @@ if (!is.na(params$inat_username)){
 ```{r data cleaning, echo = FALSE,warning=FALSE,error=FALSE}
 
 if(nrow(all_records)== 0){
-  stop("Error: couldn't get any records for the provided usernames")
+  stop("Error: couldn't get any records for the provided username and/or date query (if queried at API")
 }
 
+#convert to date format
 all_records$observed_on <- all_records$observed_on %>% as.Date()
 
 
@@ -134,6 +142,10 @@ if (!is.na(params$end_date)){
 
 #remove ones with NA date
 all_records <- all_records %>% filter(!is.na(observed_on))
+
+if(nrow(all_records)== 0){
+  stop("Error: collected records for user but none in specified date range")
+}
 
 #identify butterflies vs moths
 all_records$name <- "butterfly" #dummy
